# neet_to_backup

Anjay_2021/Anjay/examples/tutorial/BC6/: CMakeLists.txt  anjay-bc6  strace_anjay.txt
Anjay_2021/Anjay/examples/tutorial/BC6/src/: XCBR_Pos_34828.c  XCBR_Pos_34828.h  firmware_update.c  firmware_update.h  main.c  time_object.c
Anjay_2021/Anjay/examples/tutorial/firmware-update/basic-implementation/: CMakeLists.txt  basic-firmware-update
Anjay_2021/Anjay/examples/tutorial/firmware-update/basic-implementation/src/: main.c
FTP/src/: Ftp.java
go_project/fileServer/: .main.go.swp  go.mod  go.sum  main.go
go_project/fileserver_vue/: README.md  index.html  package-lock.json  package.json
lwm2m_server/coap_fileserver/: Californium.properties
lwm2m_server/leshan_myown_server/: dependency-reduced-pom.xml  pom.xml
udpserver/: pom.xml
udpserver2_BC26/: dependency-reduced-pom.xml  pom.xml
udpserver2_BC26/infer-out/: .infer_runstate.json  logs
wiresahrk_caught/: 1000anjay on wired.pcapng  1000anjay_reg_wired.pcap  20201219fail1_twoNB.pcap  nb1.pcap  nb2.pcap  nb3.pcap  nb4.pcap  nb5.pcap  nb500_1.pcap  nb500_2.pcap  nb500_2.tar.xz
wiresahrk_caught/1000nb/: 1.pcapng  1000nb.pcap  1000nb_displayed.pcap  20201211regudp.pcap  nb500_1_displayed.pcap  nb500_2_displayed.pcap
wiresahrk_caught/20211031TCP/: 20211028testNBIoT.pcap  20211028testNBIoT2.pcap  20211028testNBIoT3.pcap  (+5 more)
wireshark_data/: RTT_bc26_20201231-20210101\RTT_bc26_20201231-20210101.txt  RTT_bc26_20201231-20210101\RTT_datetime_bc26_20201231-20210101.txt  build.gradle
wireshark_data2/: DownLink_datetime.txt  DownLink_value.txt  IPchange_time.txt  UpLink_datetime.txt  UpLink_loss_time.txt  UpLink_value.txt  settings.gradle
(+544 files in other folders)
